Wording changes again

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>StageVault - Rehearsal Video Recording & Management</title>
-    <meta name="description" content="Record, organize, and manage performances and rehearsal recordings" />
+    <title>StageVault - Rehearsal Recording & Management</title>
+    <meta name="description" content="Record, organize, and manage rehearsal recordings" />
     <meta name="author" content="StageVault" />
     <meta name="theme-color" content="#8B5CF6" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <meta property="og:title" content="StageVault - Rehearsal Video Recording & Management" />
-    <meta property="og:description" content="Record, organize, and manage performances and rehearsal recordings" />
+    <meta property="og:title" content="StageVault - Rehearsal Recording & Management" />
+    <meta property="og:description" content="Record, organize, and manage rehearsal recordings" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
